--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ deploy:
   on:
     branch: master
 after_deploy:
-  - curl -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@openmrs/root-config","url":"https://'$HOSTED_FILE_PREFIX'/root-config/'$TRAVIS_COMMIT'/root-config.js" }' -X PATCH $DEPLOYER_HOST/services\?env=prod -H "Accept:application/json" -H "Content-Type:application/json" --fail
+  - curl -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@openmrs/esm-root-config","url":"https://'$HOSTED_FILE_PREFIX'/root-config/'$TRAVIS_COMMIT'/root-config.js" }' -X PATCH $DEPLOYER_HOST/services\?env=prod -H "Accept:application/json" -H "Content-Type:application/json" --fail
