--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "jest",
     "typescript": "tsc",
     "start": "webpack-dev-server",
+    "start:https": "webpack-dev-server --https --port=8080",
     "lint": "eslint . --ext ts",
     "build": "webpack"
   },
