--- a/package.json
+++ b/package.json
@@ -27,32 +27,33 @@
   },
   "homepage": "https://github.com/AMPATH/ampath-esm-root-config#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "babel-eslint": "^11.0.0-beta.0",
-    "babel-jest": "^24.8.0",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-typescript": "^7.7.4",
+    "babel-eslint": "^11.0.0-beta.2",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-important-stuff": "^1.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^2.4.1",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
-    "prettier": "^1.18.2",
+    "eslint": "^6.7.2",
+    "eslint-config-important-stuff": "^1.1.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "husky": "^2.7.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
+    "prettier": "^1.19.1",
     "pretty-quick": "^1.11.1",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "react": "^16.12.0",
+    "typescript": "^3.7.3",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "@openmrs/esm-root-config": "^1.1.2",
-    "@types/jest": "^24.0.15",
-    "@types/systemjs": "^0.20.6",
-    "single-spa": "^4.3.5",
+    "@openmrs/esm-root-config": "^1.2.0",
+    "@types/jest": "^24.0.23",
+    "@types/systemjs": "^0.20.7",
+    "single-spa": "^4.4.1",
     "zone.js": "^0.9.1"
   }
 }
