--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@openmrs/esm-module-config": "^1.1.1",
     "@openmrs/esm-root-config": "^1.2.0",
     "@types/jest": "^24.0.23",
     "@types/systemjs": "^0.20.7",
