Added configs for login success and whether to allow location selection

--- a/src/configs/login.config.json
+++ b/src/configs/login.config.json
@@ -1,5 +1,14 @@
 {
   "@openmrs/esm-login": {
+    "chooseLocation": {
+      "enabled": true
+    },
+    "links": {
+      "loginSuccess": {
+        "url": "/home",
+        "spa": true
+      }
+    },
     "logo": {
       "src": "https://ampath-poc.fra1.digitaloceanspaces.com/ampath.png",
       "alt": "Ampath Logo"
