fixed bug with configs not loading

--- a/src/configs/patient-chart.config.json
+++ b/src/configs/patient-chart.config.json
@@ -1,6 +1,6 @@
 {
   "@openmrs/esm-patient-chart": {
-    "primaryNavBar": [
+    "primaryNavbar": [
       {
         "label": "Summary",
         "path": "/summary",
