Fixed forms not launching

--- a/src/configs/patient-chart.config.json
+++ b/src/configs/patient-chart.config.json
@@ -67,7 +67,8 @@
             "esModule": "@ampath/esm-patient-chart-widgets",
             "layout": {
               "columnSpan": 2
-            }
+            },
+            "usesSingleSpaContext": true
           },
           {
             "name": "hivLabSummaryWidget",
