--- a/src/configs/programs.config.json
+++ b/src/configs/programs.config.json
@@ -1,18 +1,22 @@
 {
-  "programs": [
-    {
-      "programUuid": "781d85b0-1359-11df-a1f1-0026b9348838",
-      "programName": "HIV",
-      "forms": [
+  "@openmrs/esm-patient-chart": {
+    "externalPatientChartConfigs": {
+      "programs": [
         {
-          "encounterTypeUuid": "8d5b27bc-c2cc-11de-8d13-0010c6dffd0f",
-          "formName": "Registration Form"
-        },
-        {
-          "encounterTypeUuid": "8d5b2be0-c2cc-11de-8d13-0010c6dffd0f",
-          "formName": "Return Form"
+          "programUuid": "781d85b0-1359-11df-a1f1-0026b9348838",
+          "programName": "HIV",
+          "forms": [
+            {
+              "encounterTypeUuid": "8d5b27bc-c2cc-11de-8d13-0010c6dffd0f",
+              "formName": "Registration Form"
+            },
+            {
+              "encounterTypeUuid": "8d5b2be0-c2cc-11de-8d13-0010c6dffd0f",
+              "formName": "Return Form"
+            }
+          ]
         }
       ]
     }
-  ]
+  }
 }
